# statvfs

./: .gitignore  LICENSE  README.md  configure  configure.ac  test.hs
System/Posix/: StatVFS.hsc
include/: StatVFSConfig.h.in
